redesign of about.java html view with clicks new name of app

--- a/TimeNetExperimentGenerator/src/timenetexperimentgenerator/SystemRequirements.html
+++ b/TimeNetExperimentGenerator/src/timenetexperimentgenerator/SystemRequirements.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!--
 /*
- * System Requirements for TimeNet Experiment Generator
+ * System Requirements for TimeNET Optimization Environment
 
  * Christoph Bodenstein
  * TU-Ilmenau, FG SSE
@@ -9,14 +9,14 @@
 -->
 <html>
     <head>
-        <title>System requirements of TimeNet Experiment Generator</title>
+        <title>System requirements of TimeNET Optimization Environment</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     
     <body>
     
-        TNEG needs some specific software to run properly<br>
+        TOE needs some specific software to run properly<br>
         <br>
             <ul>
                 <li><a href="https://www.java.com/de/download/index.jsp">Java Runtime
