changed system requirements document for rgl-lib

--- a/TimeNetExperimentGenerator/src/timenetexperimentgenerator/SystemRequirements.html
+++ b/TimeNetExperimentGenerator/src/timenetexperimentgenerator/SystemRequirements.html
@@ -39,7 +39,11 @@
             recommended)</li>
                 <ul>
                     <li><a
-                    href="http://cran.r-project.org/web/packages/plot3D/index.html">plot3D-package</a></li>
+                    href="http://cran.r-project.org/web/packages/plot3D/index.html">Plot3D-package</a></li>
+                </ul>
+                <ul>
+                    <li><a
+                    href="http://cran.r-project.org/web/packages/rgl/index.html">R-OpenGL-package</a></li>
                 </ul>
         </ul>
         
