--- a/TimeNETOptimizationEnvironment/src/toe/SystemRequirements.html
+++ b/TimeNETOptimizationEnvironment/src/toe/SystemRequirements.html
@@ -15,8 +15,7 @@
     </head>
 
     <body>
-
-        TOE needs some specific software to run properly<br>
+        <h3>System requirements</h3>
         <br>
         <ul>
             <li><a href="https://www.java.com/de/download/index.jsp">Java Runtime
@@ -52,5 +51,37 @@
             </li>
         </ul>
 
+        <hr>
+        <h3>License</h3>
+        <div style="width: 400px; margin-left: auto; margin-right: auto;">
+        <h5>This Software is under licensed under Simplified BSD License</h5>
+        
+            Copyright (c) 2018, Christoph Bodenstein
+            All rights reserved.<br>
+
+Redistribution and use in source and binary forms, with or without
+modification, are permitted provided that the following conditions are met:<br>
+<ol>
+    <li> Redistributions of source code must retain the above copyright notice, this
+        list of conditions and the following disclaimer.</li>
+    <li> Redistributions in binary form must reproduce the above copyright notice,
+   this list of conditions and the following disclaimer in the documentation
+   and/or other materials provided with the distribution.</li>
+</ol>
+THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND
+ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
+WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
+DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE LIABLE FOR
+ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES
+(INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES;
+LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND
+ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
+(INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
+SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.<br>
+
+The views and conclusions contained in the software and documentation are those
+of the authors and should not be interpreted as representing official policies,
+either expressed or implied, of any involved organisation.
+        </div>
     </body>
 </html>
